cmake_minimum_required(VERSION 3.0.2)
project(talker)

find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs)

###################################
## catkin specific configuration ##
###################################
catkin_package()

###########
## Build ##
###########
include_directories(
include
${catkin_INCLUDE_DIRS}
)

add_executable(talker src/talker.cpp)
target_link_libraries(talker ${catkin_LIBRARIES})